--- a/code/www/hello-world.html
+++ b/code/www/hello-world.html
@@ -8,3 +8,10 @@
     <input type="text" name="name">
     <button type="submit">POST Submit</button>
 </form>
+
+<h1>Create a new file!</h1>
+<form action="hello.php" method="GET">
+    <input type="text" name="filename" placeholder="Enter Filename">
+    <input type="text" name="content" placeholder="Enter Content">
+    <button type="submit">Submit</button>
+</form>
